versions/3.4.0/docs/MediaFileReference.md
# MediaFileReference

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | [optional] 
**volume** | [**VolumeMini**](VolumeMini.md) |  | [optional] 
**info** | **dict(str, str)** |  | [optional] [readonly] 
**custom_fields** | **dict(str, str)** |  | [optional] [readonly] 
**resolved_permission** | [**MediaRootPermission**](MediaRootPermission.md) |  | [optional] 
**parent_file** | **dict(str, str)** |  | [optional] [readonly] 
**root** | [**MediaRootMini**](MediaRootMini.md) |  | [optional] 
**effective_custom_fields** | **dict(str, str)** |  | [optional] [readonly] 
**modified_by** | [**ElementsUserMini**](ElementsUserMini.md) |  | [optional] 
**full_path** | **str** |  | [optional] [readonly] 
**is_shared** | **bool** |  | [optional] [readonly] 
**is_excluded** | **bool** |  | [optional] [readonly] 
**is_hardlink** | **bool** |  | [optional] [readonly] 
**is_bookmarked** | **bool** |  | [optional] [readonly] 
**child_count** | **int** |  | [optional] [readonly] 
**name** | **str** |  | [optional] [readonly] 
**path** | **str** |  | [optional] [readonly] 
**pathhash** | **str** |  | [optional] [readonly] 
**ancestry** | **str** |  | [optional] [readonly] 
**is_dir** | **bool** |  | [optional] [readonly] 
**total_files** | **int** |  | [optional] [readonly] 
**size** | **int** |  | [optional] [readonly] 
**mtime** | **int** |  | [optional] [readonly] 
**present** | **bool** |  | [optional] [readonly] 
**needs_rescan** | **bool** |  | [optional] [readonly] 
**is_showroom** | **bool** |  | [optional] [readonly] 
**bundle_index** | **int** |  | [optional] [readonly] 
**modified** | **datetime** |  | [optional] [readonly] 
**parent** | **int** |  | [optional] [readonly] 
**bundle** | **int** |  | [optional] [readonly] 
**bookmarked_by** | **list[int]** |  | [optional] [readonly] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


